--- a/MSCA_31006_Time_Series_Final_Project.Rmd
+++ b/MSCA_31006_Time_Series_Final_Project.Rmd
@@ -89,8 +89,8 @@ kpss.test(pm2_5_weekly_ts)
 
 adf.test(pm2_5_weekly_ts)
 
-acf(pm2_5_monthly_ts, main = "ACF of Weekly Time Series")
-pacf(pm2_5_monthly_ts, main = "PACF of Weekly Time Series")
+acf(pm2_5_weekly_ts, main = "ACF of Weekly Time Series")
+pacf(pm2_5_weekly_ts, main = "PACF of Weekly Time Series")
 
 ```
 
@@ -179,17 +179,17 @@ boxplot(reshape_avg_aqi_by_month_year[2:26])
 
 ```
 
-#### Step 6: Split data into train and test
+#### Step 6: Split data into train and test - Weekly
 
 ```{r, tidy=TRUE}
 
 # Split the data into a training and test dataset
 train <- window(pm2_5_weekly_ts, start = c(1999,1), end=c(2020,52))
-test <- window(pm2_5_weekly_ts, start = c(2021,1), end=c(2023,6))
+test <- window(pm2_5_weekly_ts, start = c(2021,1), end=c(2023,7))
 
 ```
 
-#### Step 7: Decompose the weekly plot
+#### Step 7: Decompose the time series plot - Weekly
 
 ```{r, tidy=TRUE}
 
@@ -204,8 +204,7 @@ periodogram(train, log = "no", plot=TRUE,
 #  2) A trend that is repeating every 9.6 years (500 weeks)
 #  3) A typical half yearly (26 weeks) seasonal trend
 
-# Overall, there is no mixed strong trend that normal seasonality model cannot
-# capture.
+# Overall, there is no mixed effect that normal seasonality model cannot capture.
 
 # Decompose the series
 plot(decompose(train, type="multiplicative"))
@@ -240,11 +239,11 @@ pacf(train_diff, main = "PACF of Seasonal Differencing Time Series")
 
 ```
 
-#### Step 6: Benchmark using snaive model
+#### Step 8: Benchmark using snaive model - Weekly
 
 ```{r, tidy=TRUE}
 
-# Forecast the seasonal naïve for each month of 1980
+# Forecast the seasonal naïve for (2021-01 to 2023-07)
 forecast_snaive <- snaive(train, h=110)
 # Plot the forecasts for snaive model
 plot(forecast_snaive, main = "PM 2.5 AQI Forecast - SNaive",
@@ -262,3 +261,84 @@ mse_snaive
 
 ```
 
+#### Step 9: Split data into train and test - Monthly
+
+```{r, tidy=TRUE}
+
+# Split the data into a training and test dataset
+train_monthly <- window(pm2_5_monthly_ts, start = c(1999,1), end=c(2020,12))
+test_monthly <- window(pm2_5_monthly_ts, start = c(2021,1), end=c(2023,7))
+
+```
+
+#### Step 10: Decompose the time series plot - Monthly
+
+```{r, tidy=TRUE}
+
+# Looking at spectral analysis
+periodogram(train_monthly, log = "no", plot=TRUE, 
+            ylab = "Periodogram",
+            xlab = "Frequency",
+            lwd=2, xlim = c(0, 0.2))
+
+# There are two trends: 
+#  1) A typical yearly (12 months) seasonal trend
+#  2) A trend that is repeating every 8-9 years (100 months)
+#  3) A typical half yearly (6 months) seasonal trend
+
+# Overall, there is no mixed effect that normal seasonality model cannot capture.
+
+# Decompose the series
+plot(decompose(train_monthly, type="multiplicative"))
+
+# Important Inferences
+# 1) The PM2.5 AQI has been decreasing overall though there are rise every now and then.
+#    However the trend is going down with time.
+# 2) Winter months have a strong seasonal effect with Nov and Dec being the peak months
+#    usually which likely could be due to cold temperatures causing pollutant to
+#    not escape the lower atmosphere.
+#    Link: https://www.accuweather.com/en/health-wellness/why-air-pollution-is-worse-in-winter/689434#:~:text=Cold%20air%20is%20denser%20and%20moves%20slower%20than%20warm%20air,rate%20than%20during%20the%20summer.
+# 3) We can see a seasonal cycle of 12 months where the mean value of each month starts 
+#    with a increasing trend in the beginning of the year and drops down towards 
+#    the end of the year. We can see a seasonal effect with a cycle of 12 months.
+
+
+# Understand the seasonality and remove it to see the trend
+train_monthly_diff <- diff(train_monthly, lag = 12)
+autoplot(train_monthly_diff, ylab="Train Seasonal Differencing (Monthly)")
+
+# Let's look if the series is stationary?
+kpss.test(train_monthly_diff)
+# The reported p-value is 0.1, which is > 0.05, and would suggest that we fail 
+# to reject the null hypothesis of level stationarity (conclusion: stationary)
+
+adf.test(train_monthly_diff)
+# The reported p-value of 0.01 (<0.05) so we do reject the null hypothesis that 
+# the time series is non-stationary (conclusion: stationary)
+
+acf(train_monthly_diff, main = "ACF of Seasonal Differencing Time Series")
+pacf(train_monthly_diff, main = "PACF of Seasonal Differencing Time Series")
+
+```
+
+#### Step 11: Benchmark using snaive model - Monthly
+
+```{r, tidy=TRUE}
+
+# Forecast the seasonal naïve for (2021-01 to 2023-07)
+forecast_snaive_monthly <- snaive(train_monthly, h=31)
+# Plot the forecasts for snaive model
+plot(forecast_snaive_monthly, main = "PM 2.5 AQI Forecast - SNaive",
+         xlab = "Week", ylab = "PM 2.5 AQI")
+lines(test_monthly)
+
+# Compare the forecast with the actual test data by calculating MAPE and MSE
+# Mean Absolute Percentage Error (MAPE)
+mape_snaive <- mean(abs((test_monthly - forecast_snaive_monthly$mean)/test_monthly))
+mape_snaive
+
+# Mean Squared Error (MSE)
+mse_snaive <- mean((test_monthly - forecast_snaive_monthly$mean)^2)
+mse_snaive
+
+```
